test/scc/pp/errors/030.a
030.t:1:7: error: token '=' is not valid in preprocessor expressions